[project]
name = "multi-tool-base-agent"
version = "0.1.0"
description = "A multi-tool base agent built using the Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines]",
    "google-adk>=1.23.0,<1.32.0",
    "pydantic>=2.11.3",
    "numpy>=2.3.1",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "python-dotenv",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]
